# git-gerrit-bridge

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
git_gerrit/: __about__.py  __main__.py
git_gerrit/cli/: __init__.py  checkout.py  clean.py  new.py  push.py  rebase.py  status.py  sync.py
git_gerrit/utils/: branch.py  change.py  changebase.py  gerrit.py  git.py  localchange.py  remotechange.py  version.py
